# segel

./: .gitignore  .mcp.json  .vercelignore  README.md  SUBMISSION.md  package-lock.json  package.json  vercel.json
circuits/: auctionResult.circom  bidValidity.circom
contracts/otc/: Cargo.toml
contracts/otc/src/: lib.rs  test.rs
contracts/otc/test_snapshots/test/: admin_can_rotate_verifiers_and_admin.1.json  admin_can_set_token.1.json  cancel_before_deadline_rejected.1.json  cancel_expired_refunds_everyone.1.json  commit_bid_locks_escrow_and_records.1.json  commit_bid_rejects_after_deadline.1.json  commit_bid_rejects_duplicate_nullifier.1.json  commit_bid_rejects_over_capacity.1.json  mark_price_reads_oracle.1.json  post_rfq_creates_open_rfq.1.json  post_rfq_rejects_bad_band.1.json  settle_pays_winner_refunds_losers.1.json  settle_rejects_clearing_over_band.1.json  settle_twice_rejected.1.json  settle_with_no_bids_rejected.1.json  unknown_rfq_rejected.1.json
deployments/: testnet.json
docs/: ARCHITECTURE.md  CT_FEEDBACK.md  DEMO_SCRIPT.md  DISCORD_POST.md  ONCHAIN.md  PASSKEY.md  SECURITY.md  TESTING.md
frontend/: app.html  app.js  index.html  landing.css  prover.js  serve.mjs  stellar.js  styles.css  wallet-passkey.js  wallet.js
mcp/: server.mjs
scripts/: asp.mjs  browser-e2e.mjs  browser-playwright.mjs  browser-test.mjs  build-all-circuits.sh  build-circuit.sh  disclose-bid.mjs  e2e-testnet.mjs  gen-input-auction.mjs  gen-input-bid.mjs  record-demo.mjs  seed-rfq.mjs  seed-scenarios.mjs  tamper-onchain.mjs  test-fullprove.mjs  test-negative.mjs  (+3 more)
(+4 files in other folders)
